# 1-ml.com

./: .gitignore  README.md
lambdas/: Cargo.toml
lambdas/api_me/: Cargo.toml
lambdas/api_me/src/: handler.rs  main.rs  requestapiemail.rs  requestapime.rs
lambdas/oneml/: Cargo.toml
lambdas/oneml/src/: account.rs  api.rs  aws.rs  constructs.rs  db.rs  email.rs  error.rs  identity.rs  lib.rs  response.rs  sns.rs  traits.rs
lambdas/oneml/src/api/: authenticated_request.rs  unauthenticated_request.rs
lambdas/oneml/src/api/authenticated_request/: email_get.rs  email_patch.rs  me_get.rs  me_patch.rs  received_email_get.rs
lambdas/oneml/src/aws/: config.rs  config.template.rs
lambdas/oneml/src/constructs/: account.rs  email.rs
lambdas/oneml/src/db/: email.rs  tables.rs
lambdas/oneml/src/db/tables/: email.rs
lambdas/oneml/src/traits/: store.rs
lambdas/oneml/src/traits/store/: account.rs  email.rs
lambdas/ses_handler/: Cargo.toml
lambdas/ses_handler/src/: address.rs  aws.rs  error.rs  mail.rs  main.rs  sesevent.rs
lambdas/ses_handler/src/aws/: config.rs  config.template.rs
vue3/: home.html  index.html  package.json  tailwind.config.js  vite.config.js
vue3/public/assets/img/: mail.txt
vue3/src/components/: ErrorAlert.spec.js  ErrorAlert.vue  HeaderElement.vue  HeaderSection.vue  InputComponentPassword.vue  LoadingAlert.spec.js  LoadingAlert.vue  PricingSection.spec.js  PricingSection.vue  SidebarItem.spec.js  SnackAlert.vue
vue3/src/pages/home/: App.vue
vue3/src/pages/home/components/: HomeView.vue  SettingsView.vue  VerificationView.vue
vue3/src/pages/index/components/: HowToStep.vue  PrivacySection.vue  SignUpConfirmAlert.vue  TermsSection.vue  VerificationAlert.vue
www/: jest.config.js  package.json  tailwind.config.js  vue.config.js
www/public/: index.html
www/src/components/: ErrorAlert.vue  FooterElement.spec.js  FooterElement.vue  HeaderElement.spec.js  HeaderElement.vue  HeaderSection.spec.js  InputComponentPassword.spec.js  ModalDialog.vue  PricingSection.vue  SidebarItem.vue
www/src/js/: api.js  api.spec.js
www/src/pages/home/: App.vue  main.js
www/src/pages/home/components/: HomeView.vue
www/src/pages/index/: App.vue
www/src/pages/index/components/: BannerText.vue  ForgotPasswordAlert.vue  NewPasswordRequiredAlert.vue  PrivacySection.vue  TermsSection.vue
www/tests/unit/: example.spec.js
