[package]
name = "api_me"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "2"
http = "0.2"
lambda_http = "0.5"
tokio = { version = "1", features = [ "macros" ] }
simple-error = "0.2"
serde_json = "1"
async-trait = "0.1"
regex = "1"
urlencoding = "2"

oneml = { path = "../oneml" }

