[package]
name    = "oneml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
log          = "0.4"
serde        = { version = "1", features = [ "derive" ] }
serde_json   = "1"
simple-error = "0.2"
async-trait  = "0.1"
chrono       = { version = "0.4", features = [ "serde" ] }
futures-util = "0.3"
regex        = "1"
derive_builder = "0.11"

aws-config       = "0.46"
aws-sdk-dynamodb = "0.16"

[dev-dependencies]
# derive_setter  = "0.2"
tokio          = "1"
