[package]
name    = "oneml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
log          = "0"
serde        = { version = "1", features = [ "derive" ] }
serde_json   = "1"
async-trait  = "0"
chrono       = { version = "0", features = [ "serde" ] }
futures-util = "0"
regex        = "1"
derive_builder = "0"
thiserror    = "1"
futures      = { version = "0" }
lambda_http  = "0"

aws-config       = "1"
aws-sdk-dynamodb = "1"
aws-sdk-sns      = "1"

derive-sql = { version = "0", features = [ "sqlite", "postgres" ] }

[dev-dependencies]
# derive_setter  = "0"
tokio          = "1"
