[package]
name = "ses_handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tokio = { version = "1", features = [ "macros" ] }
simple-error = "0.2"
regex = "1"
mailparse = "0.13"
lambda_runtime = "0.5"

aws-config  = "0.46"
aws-types   = "0.46"
aws-sdk-ses = "0.16"
aws-sdk-s3  = "0.16"

oneml = { path = "../oneml" }
